--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.7",
+    "axios": "^1.10.0",
+    "clsx": "^2.1.1",
+    "next": "15.4.2",
+    "prop-types": "^15.8.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.2"
+    "react-router-dom": "^7.7.0",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
